add redis-client/target to gitignore and circleci

--- a/circle.yml
+++ b/circle.yml
@@ -6,6 +6,7 @@ dependencies:
     - "target"
     - "project/target"
     - "project/project/target"
+    - "redis-client/target"
     - "shale-lib/target"
     - "shale-service/target"
 
