split out http-client project

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ local.conf
 /target
 /project/target
 /project/project/target
+/http-client/target
 /redis-client/target
 /shale-lib/target
 /shale-service/target
