split out selenium-client project

--- a/circle.yml
+++ b/circle.yml
@@ -8,6 +8,7 @@ dependencies:
     - "project/project/target"
     - "http-client/target"
     - "redis-client/target"
+    - "selenium-client/target"
     - "shale-lib/target"
     - "shale-service/target"
 
