--- a/.gitignore
+++ b/.gitignore
@@ -5,5 +5,6 @@ local.conf
 /project/project/target
 /http-client/target
 /redis-client/target
+/selenium-client/target
 /shale-lib/target
 /shale-service/target
