--- a/circle.yml
+++ b/circle.yml
@@ -10,6 +10,7 @@ dependencies:
     - "redis-client/target"
     - "selenium-client/target"
     - "shale-lib/target"
+    - "shale-http-server/target"
     - "shale-service/target"
 
 test:
