--- a/circle.yml
+++ b/circle.yml
@@ -7,6 +7,7 @@ dependencies:
     - "project/target"
     - "project/project/target"
     - "http-client/target"
+    - "interval/target"
     - "logback-setup/target"
     - "redis-client/target"
     - "selenium-client/target"
