move stuff into shale-core and shale-redis

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@
 /logback-setup/target
 /redis-client/target
 /selenium-client/target
+/shale-core/target
 /shale-lib/target
 /shale-http-server/target
 /shale-redis/target
