--- a/circle.yml
+++ b/circle.yml
@@ -11,6 +11,7 @@ dependencies:
     - "logback-setup/target"
     - "redis-client/target"
     - "selenium-client/target"
+    - "shale-core/target"
     - "shale-lib/target"
     - "shale-http-server/target"
     - "shale-redis/target"
